docs: add docs for create new opening
